--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,8 @@
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.12.0",
-    "pg-promise": "^11.9.1"
+    "pg-promise": "^11.9.1",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.2"
